Bug: Fixed filter dialog showed in login page when accessed with a valid 
     session
Bug: Fixed issue #20, setup now handle database privilege when mysql and 
     waf-fle are in diferent hosts. Now you can specify the client 
     hostname/address or even a wildcard on setup.
Bug: Fixed issue #26, where the timming filters are not filtering 
     properly. 
Improve: when used with SSL mlog2waffle now allow to define if 
         certificate need to be validated or not. Needed when a self-
         signed certificate is used. Edit mlog2waffle.conf to configure.
Improve: Apache authorization config ajusted to be compatible with 
         version 2.4+, see waf-fle.conf comments for details.
Improve: Give more enfasis on success message on setup (instructing to 
         edit config.php when finished).
Improve: ChangeLog reformated

Version 0.6.1: Apr, 23 2013
-------------
Bug: Solve a issue with no standard timezones, like used in Venezuela.


Version 0.6.0: Apr, 23 2013
-------------
Bug: Issue #18 fixed, mysql user permissions corrected in README file, 
     thanks for Reinhard Sojka for report. 
Bug: Fixed the template for mlogc usage, when used Event Feeder Wizard.
Improve: Better handling of missing config.php.
Bug: Issue #15 fixed, delete event in event detail don't work, thanks 
     for Juraj Sakala for report. 
Bug: Issue #14 fixed, when an events is deleted the full event detail 
     was not deleted, thanks for Juraj Sakala for report. 
Bug: Issue #11 fixed, improper use of XFF header when undesired, thanks 
     for Juraj Sakala for report.
Bug: Issue #10 fixed, bad header parsing when receiving events, thanks 
     for Juraj Sakala for report.
Bug: Issue #9 fixed, correct the filter dialog to not be showed in login 
     page, when a sucessful login happen and expected redirection don't 
     work (by browser configuration, extention blocking redirect etc). 
     A html link was created to allow user to get in the WAF-FLE in this 